<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Entertainmentmoduel.cartoons.cartoonmainScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/shape">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="Cartoons"
            android:textColor="#fff"
            android:textSize="40dp"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_weight=".5"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:onClick="firstCartoon"
            app:cardBackgroundColor="@color/skyblue"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:drawableLeft="@drawable/vdo"
                android:layout_marginLeft="10dp"
                android:text="@string/first_cartoon"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:onClick="car2"
            android:layout_marginRight="40dp"
            app:cardBackgroundColor="@color/skyblue"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/second_cartoon"
                android:textColor="#fff"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/vdo"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:onClick="car3"
            app:cardBackgroundColor="@color/skyblue"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/third_cartoon"
                android:textColor="#fff"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/vdo"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:onClick="car4"
            android:layout_marginRight="40dp"
            app:cardBackgroundColor="@color/skyblue"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/fourth_cartoon"
                android:textColor="#fff"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/vdo"
                android:textStyle="bold">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:onClick="car5"
            app:cardBackgroundColor="@color/skyblue"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/vdo"
                android:text="@string/fifth_cartoon"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:background="@drawable/shape2">

    </LinearLayout>

</LinearLayout>